--- a/index.htm
+++ b/index.htm
@@ -116,12 +116,8 @@
       background: #FF0000;
     }
 
-    /* Remove all formatting from ChatGPT link */
     .links a[href*="chatgpt"] {
-      all: unset;
-      cursor: pointer;
-      color: #0077cc;
-      text-decoration: underline;
+      background: #FF0000;
     }
 
     .pagination {
