--- a/index.htm
+++ b/index.htm
@@ -43,6 +43,26 @@
       margin-top: 5px;
     }
 
+    .button-cubes-top {
+      margin: 15px auto 5px;
+      display: inline-block;
+    }
+
+    .button-cubes-top a {
+      background: #007BFF;
+      color: white;
+      padding: 10px 16px;
+      font-size: 0.95em;
+      text-decoration: none;
+      border-radius: 8px;
+      display: inline-block;
+      transition: transform 0.2s ease;
+    }
+
+    .button-cubes-top a:hover {
+      transform: scale(1.05);
+    }
+
     .date-buttons {
       background: #101010;
       display: flex;
@@ -175,7 +195,7 @@
 
     .bottom-image {
       display: block;
-      margin: 20px auto 40px;
+      margin: 20px auto 20px;
       width: 95%;
       max-width: 500px;
       height: auto;
@@ -187,6 +207,11 @@
   <header>
     <h1>Jazz Fest Sampler</h1>
     <div class="subtitle">by <a href="https://thegamebureau.com" style="color: #ccc; text-decoration: none;">thegamebureau.com</a></div>
+    <div class="button-cubes-top">
+      <a href="https://www.nojazzfest.com/downloads/2025-nojhf-8day-cubes.pdf" target="_blank">
+        View 8-Day Jazz Fest Cubes (PDF)
+      </a>
+    </div>
     <div class="date-buttons" id="dateButtons"></div>
   </header>
 
@@ -202,6 +227,12 @@
   </footer>
 
   <img src="2024.jpg" alt="Jazz Fest 2024 Poster" class="bottom-image" />
+
+  <div style="text-align: center; margin-bottom: 20px;">
+    <img src="jazzfest2025_qr.png" alt="Scan this to open the Jazz Fest Sampler"
+         style="max-width: 300px; width: 80%; margin: 10px auto; display: block;" />
+    <p style="color: #444; font-size: 0.95em;">Hold your phone up so friends can scan this to get the Sampler.</p>
+  </div>
 
   <script>
     let allPerformances = [];
