--- a/index.htm
+++ b/index.htm
@@ -364,7 +364,7 @@
         <div class="links">
           <a href="${p.chatgpt}" class="chatgpt-button">ChatGPT</a>
           <a href="${p.spotify}">Spotify</a>
-          <a href="${p.youtube}">YouTube</a>
+          <a href="${p.youtube}">YouTube Music</a>
           <a href="${p.amazon}" class="amazon-button">Amazon Music</a>
           <a href="${p.soundcloud}" class="soundcloud-button">SoundCloud</a>
         </div>
