--- a/index.html
+++ b/index.html
@@ -317,11 +317,13 @@ footer a {
       card.className = 'card';
       const shareUrl = `${window.location.origin}${window.location.pathname}?artist=${encodeURIComponent(p.name)}`;
       const appleMusicSearchUrl = `https://music.apple.com/search?term=${encodeURIComponent(p.name)}`;
+      const spotifySearchUrl = `https://open.spotify.com/search/${encodeURIComponent(p.name)}/artists`;
+
       card.innerHTML = `
         <h2>${p.name}</h2>
         <div class="links">
           <a href="${p.chatgpt}" class="chatgpt-button">ChatGPT</a>
-          <a href="${p.spotify}">Spotify</a>
+          <a href="${spotifySearchUrl}">Spotify</a>
           <a href="${p.youtube}">YouTube Music</a>
           <a href="${p.amazon}" class="amazon-button">Amazon Music</a>
           <a href="${p.soundcloud}" class="soundcloud-button">SoundCloud</a>
@@ -349,12 +351,11 @@ footer a {
             name: getText('name'),
             date: getText('date'),
             song: getText('most_popular_song'),
-            spotify: getText('spotify_url'),
+            spotify: getText('spotify_url'), // still included for structure
             youtube: getText('youtube_music_url'),
             chatgpt: getText('chatgpt_url'),
             amazon: getText('amazon_music_url'),
             soundcloud: getText('soundcloud_url')
-            // No need for Apple Music URL anymore
           });
         }
 
