--- a/index.html
+++ b/index.html
@@ -282,14 +282,20 @@ footer a {
 
   <div style="text-align: center; margin: 20px;">
     <button
-      class="share-button"
-      onclick="copyToClipboardOrShareSMS(
-        'Jazz Fest Sampler App',
-        window.location.origin + window.location.pathname
-      )"
-    >
-      Text This App To A Friend
-    </button>
+    class="share-button"
+    onclick="(function(){
+      const msg = 'Check out the Jazz Fest Sampler! https://the-game-bureau.github.io/festguide';
+      if (isMobileDevice()) {
+        window.location.href = 'sms:?&body=' + encodeURIComponent(msg);
+      } else {
+        navigator.clipboard.writeText(msg)
+          .then(() => alert('Link copied to clipboard!'))
+          .catch(() => alert('Could not copy the link.'));
+      }
+    })()"
+  >
+    Text This App To A Friend
+  </button>
   </div>
 
   <script async defer crossorigin="anonymous"
